recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:4: error: '(' expected but identifier found.
  if hanoi(height = 0) 
     ^HanoiBoard:6: error: illegal start of simple expression
}
^