recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.code
def hanoi(height:Int, src:Int, other:Int, dst:Int) 
{
  if hanoi(height = 0) 
  	
}
